Simplify Decap CMS config to use GitHub direct auth

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,6 +2,9 @@ backend:
   name: github
   repo: calebwastaken/calebwastaken-blog
   branch: main
+  # This uses GitHub's direct authentication
+  auth_scope: repo
+  open_authoring: true
 
 media_folder: "static/images"
 public_folder: "/images"
