--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,10 @@
 backend:
-  name: git-gateway
+  name: github
+  repo: calebwastaken/calebwastaken-blog
   branch: main
+  # This uses GitHub's direct authentication
+  auth_scope: repo
+  open_authoring: true
 
 media_folder: "static/images"
 public_folder: "/images"
